Source/JavaScriptCore/b3/B3Const32Value.cpp
@@ -220,6 +220,9 @@ TriState Const32Value::notEqualConstant(const Value* other) const
 
 TriState Const32Value::lessThanConstant(const Value* other) const
 {
+    // INT32_MAX < x is always false.
+    if (static_cast<int32_t>(m_value) == std::numeric_limits<int32_t>::max())
+        return FalseTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(m_value < other->asInt32());
@@ -227,6 +230,9 @@ TriState Const32Value::lessThanConstant(const Value* other) const
 
 TriState Const32Value::greaterThanConstant(const Value* other) const
 {
+    // INT32_MIN > x is always false.
+    if (static_cast<int32_t>(m_value) == std::numeric_limits<int32_t>::min())
+        return FalseTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(m_value > other->asInt32());
@@ -234,6 +240,9 @@ TriState Const32Value::greaterThanConstant(const Value* other) const
 
 TriState Const32Value::lessEqualConstant(const Value* other) const
 {
+    // INT32_MIN <= x is always true.
+    if (static_cast<int32_t>(m_value) == std::numeric_limits<int32_t>::min())
+        return TrueTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(m_value <= other->asInt32());
@@ -241,6 +250,9 @@ TriState Const32Value::lessEqualConstant(const Value* other) const
 
 TriState Const32Value::greaterEqualConstant(const Value* other) const
 {
+    // INT32_MAX >= x is always true.
+    if (static_cast<int32_t>(m_value) == std::numeric_limits<int32_t>::max())
+        return TrueTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(m_value >= other->asInt32());
@@ -248,6 +260,9 @@ TriState Const32Value::greaterEqualConstant(const Value* other) const
 
 TriState Const32Value::aboveConstant(const Value* other) const
 {
+    // UINT32_MIN > x is always false.
+    if (static_cast<uint32_t>(m_value) == std::numeric_limits<uint32_t>::min())
+        return FalseTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(static_cast<uint32_t>(m_value) > static_cast<uint32_t>(other->asInt32()));
@@ -255,6 +270,9 @@ TriState Const32Value::aboveConstant(const Value* other) const
 
 TriState Const32Value::belowConstant(const Value* other) const
 {
+    // UINT32_MAX < x is always false.
+    if (static_cast<uint32_t>(m_value) == std::numeric_limits<uint32_t>::max())
+        return FalseTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(static_cast<uint32_t>(m_value) < static_cast<uint32_t>(other->asInt32()));
@@ -262,6 +280,9 @@ TriState Const32Value::belowConstant(const Value* other) const
 
 TriState Const32Value::aboveEqualConstant(const Value* other) const
 {
+    // UINT32_MAX >= x is always true.
+    if (static_cast<uint32_t>(m_value) == std::numeric_limits<uint32_t>::max())
+        return TrueTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(static_cast<uint32_t>(m_value) >= static_cast<uint32_t>(other->asInt32()));
@@ -269,6 +290,9 @@ TriState Const32Value::aboveEqualConstant(const Value* other) const
 
 TriState Const32Value::belowEqualConstant(const Value* other) const
 {
+    // UINT32_MIN <= x is always true.
+    if (static_cast<uint32_t>(m_value) == std::numeric_limits<uint32_t>::min())
+        return TrueTriState;
     if (!other->hasInt32())
         return MixedTriState;
     return triState(static_cast<uint32_t>(m_value) <= static_cast<uint32_t>(other->asInt32()));
