Source/JavaScriptCore/b3/B3Const64Value.cpp
@@ -220,6 +220,9 @@ TriState Const64Value::notEqualConstant(const Value* other) const
 
 TriState Const64Value::lessThanConstant(const Value* other) const
 {
+    // INT64_MAX < x is always false.
+    if (static_cast<int64_t>(m_value) == std::numeric_limits<int64_t>::max())
+        return FalseTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(m_value < other->asInt64());
@@ -227,6 +230,9 @@ TriState Const64Value::lessThanConstant(const Value* other) const
 
 TriState Const64Value::greaterThanConstant(const Value* other) const
 {
+    // INT64_MIN > x is always false.
+    if (static_cast<int64_t>(m_value) == std::numeric_limits<int64_t>::min())
+        return FalseTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(m_value > other->asInt64());
@@ -234,6 +240,9 @@ TriState Const64Value::greaterThanConstant(const Value* other) const
 
 TriState Const64Value::lessEqualConstant(const Value* other) const
 {
+    // INT64_MIN <= x is always true.
+    if (static_cast<int64_t>(m_value) == std::numeric_limits<int64_t>::min())
+        return TrueTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(m_value <= other->asInt64());
@@ -241,6 +250,9 @@ TriState Const64Value::lessEqualConstant(const Value* other) const
 
 TriState Const64Value::greaterEqualConstant(const Value* other) const
 {
+    // INT64_MAX >= x is always true.
+    if (static_cast<int64_t>(m_value) == std::numeric_limits<int64_t>::max())
+        return TrueTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(m_value >= other->asInt64());
@@ -248,6 +260,9 @@ TriState Const64Value::greaterEqualConstant(const Value* other) const
 
 TriState Const64Value::aboveConstant(const Value* other) const
 {
+    // UINT64_MIN > x is always false.
+    if (static_cast<uint64_t>(m_value) == std::numeric_limits<uint64_t>::min())
+        return FalseTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(static_cast<uint64_t>(m_value) > static_cast<uint64_t>(other->asInt64()));
@@ -255,6 +270,9 @@ TriState Const64Value::aboveConstant(const Value* other) const
 
 TriState Const64Value::belowConstant(const Value* other) const
 {
+    // UINT64_MAX < x is always false.
+    if (static_cast<uint64_t>(m_value) == std::numeric_limits<uint64_t>::max())
+        return FalseTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(static_cast<uint64_t>(m_value) < static_cast<uint64_t>(other->asInt64()));
@@ -262,6 +280,9 @@ TriState Const64Value::belowConstant(const Value* other) const
 
 TriState Const64Value::aboveEqualConstant(const Value* other) const
 {
+    // UINT64_MAX >= x is always true.
+    if (static_cast<uint64_t>(m_value) == std::numeric_limits<uint64_t>::max())
+        return TrueTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(static_cast<uint64_t>(m_value) >= static_cast<uint64_t>(other->asInt64()));
@@ -269,6 +290,9 @@ TriState Const64Value::aboveEqualConstant(const Value* other) const
 
 TriState Const64Value::belowEqualConstant(const Value* other) const
 {
+    // UINT64_MIN <= x is always true.
+    if (static_cast<uint64_t>(m_value) == std::numeric_limits<uint64_t>::min())
+        return TrueTriState;
     if (!other->hasInt64())
         return MixedTriState;
     return triState(static_cast<uint64_t>(m_value) <= static_cast<uint64_t>(other->asInt64()));
